--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p>This is a personal blog to document my journey to become a software developer. If you like to follow along I'd be happy to share what I learn with you.</p><hr>
 <h3><em><span class="text-muted">Beginning</span></em></h3>
 <p>
-	I have always been into STEM education, majoring in automotive engineering, fixing computers on the side and having software developers among friends. I have not had a chance to seriously dive into coding, not until moocs and other online learning tools took the stage and made it all possible for me. I had a gainful employment and a family with two sweet baby girls at that time. So the only thing I was missing was a passion to do something I always wanted - a passion to solve problems. Being a lifelong learner with a 24/7 self paced online access to education meant I could do it in my spare time. So I jumped right into it.
+	I have always been into STEM education, majoring in automotive engineering, fixing computers on the side and having software developers among friends. I have not had a chance to seriously dive into coding, not until moocs and other online learning tools took the stage and made it all possible for me. I had a gainful employment and a family with two sweet baby girls at that time. So the only thing I was missing was a passion to do something I always wanted - to solve problems on a computer. Being a lifelong learner with a 24/7 self paced online access to programmimg courses meant I could do it in my spare time. So I jumped right into it.
 </p>
 </div>
 </body>
