--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
-<html>
-<title>On my way</title>
+<html lang="en">
+
 <head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Personal blog of Alisher Yuldashev">
+<meta name="author" content="Alisher Yuldashev">
+<title>On my way to ...</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
+
 <body>
 <div class="container">
-<h1><strong>On my way</strong></h1><br>
-<p>This is a personal blog to document my journey to become a software developer. If you like to follow along I'd be happy to share what I learn with you.</p><hr>
-<h3><em><span class="text-muted">Beginning</span></em></h3>
-<p>
+<h1><strong>On my way to...</strong></h1><br>
+<p>This is a personal blog to document my journey towards becoming a software developer and finding work that I will be proud to tell everyone about. If you like to follow along, I'd be excited to share with you what I learn</p><hr>
+<h3>Beginning</h3>
+<p><span class="text-muted">
 	I have always been into STEM education, majoring in automotive engineering, fixing computers on the side and having software developers among friends. I have not had a chance to seriously dive into coding, not until moocs and other online learning tools took the stage and made it all possible for me. I had a gainful employment and a family with two sweet baby girls at that time. So the only thing I was missing was a passion to do something I always wanted - to solve problems on a computer. Being a lifelong learner with a 24/7 self paced online access to programmimg courses meant I could do it in my spare time. So I jumped right into it.
-</p>
+</span></p>
 </div>
 </body>
 </html>
