--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
 <div class="container">
 <h1><strong>On my way to...</strong></h1><br>
-<p>This is a personal blog to document my journey towards becoming a software developer and finding work that I will be proud to tell everyone about. If you like to follow along, I'd be excited to share with you what I learn</p><hr>
+<p>This is a personal blog to document my journey towards becoming a software developer and finding work that I will be proud to tell everyone about. If you like to follow along, I'd be excited to share with you what I learn.</p><hr>
 <h3>Beginning</h3>
 <p><span class="text-muted">
-	I have always been into STEM education, majoring in automotive engineering, fixing computers on the side and having software developers among friends. I have not had a chance to seriously dive into coding, not until moocs and other online learning tools took the stage and made it all possible for me. I had a gainful employment and a family with two sweet baby girls at that time. So the only thing I was missing was a passion to do something I always wanted - to solve problems on a computer. Being a lifelong learner with a 24/7 self paced online access to programmimg courses meant I could do it in my spare time. So I jumped right into it.
+	I have always been into STEM education, majoring in automotive engineering, fixing computers on the side and having software developers among friends. I have not had a chance to seriously dive into coding, not until moocs and other online learning tools took the stage and made it all possible for me. I had a gainful employment and a family with two sweet baby girls at that time. So the only thing I was missing was to spend my working hours on something I was quite interested in - solving problems on a computer. Being a lifelong learner and getting a 24/7 self paced online access to programming courses meant I could do it in my spare time. So I jumped right into it.
 </span></p>
 </div>
 </body>
