--- a/index.html
+++ b/index.html
@@ -21,16 +21,38 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<style type="text/css">
+body 
+	{
+	text-align: justify;
+	text-justify: inter-word;
+	}	
+
+hr.style1
+	{
+		border: 0; 
+  		height: 1px; 
+  		background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  		background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  		background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  		background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); 
+	}
+</style>
 </head>
 
 <body>
 <div class="container">
 <h1><strong>On my way to...</strong></h1><br>
-<p>This is a personal blog to document my journey towards becoming a software developer and finding work that I will be proud to tell everyone about. If you like to follow along, I'd be excited to share with you what I learn.</p><hr>
+<p>This is a personal blog to document my journey towards becoming a software developer and finding work that I will be proud to tell everyone about. If you like to follow along, I'd be excited to share with you what I learn.</p><hr class="style1">
 <h3>Beginning</h3>
 <p><span class="text-muted">
 	I have always been into STEM education, majoring in automotive engineering, fixing computers on the side and having software developers among friends. I have not had a chance to seriously dive into coding, not until moocs and other online learning tools took the stage and made it all possible for me. I had a gainful employment and a family with two sweet baby girls at that time. So the only thing I was missing was to spend my working hours on something I was quite interested in - solving problems on a computer. Being a lifelong learner and getting a 24/7 self paced online access to programming courses meant I could do it in my spare time. So I jumped right into it.
-</span></p>
+</span></p><hr>
+<h3>First encounter</h3>
+<p><span class="text-muted">
+	The earliest opportunity presented itself in August 2005 when my family went on a month long vacation and I was left with too much time on my hands. My regular routine was to wake up at 5 a.m. and go to the gym. Then be at work from 9 to 5 and come back home at around 6 p.m. Because I was never a fan of wasting my time watching tv shows (except for a few ones ) or playing video games (again, except for random rounds of FIFA on my xbox) I started exploring different online resources and educate myself with programming languages that I would later find out form front end development - html/css/javascript.
+	Who knows, maybe sometime soon I will be forever grateful to my family for giving me this month to pursue my interest. Maybe that one right direction and one positive action can take me to the whole new level of my life. Only time will tell. 
+</span></p><hr>
 </div>
 </body>
 </html>
