--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@ hr.style1
 </span></p><hr>
 <h3>First encounter</h3>
 <p><span class="text-muted">
-	The earliest opportunity presented itself in August 2005 when my family went on a month long vacation and I was left with too much time on my hands. My regular routine was to wake up at 5 a.m. and go to the gym. Then be at work from 9 to 5 and come back home at around 6 p.m. Because I was never a fan of wasting my time watching tv shows (except for a few ones ) or playing video games (again, except for random rounds of FIFA on my xbox) I started exploring different online resources and educate myself with programming languages that I would later find out form front end development - html/css/javascript.
-	Who knows, maybe sometime soon I will be forever grateful to my family for giving me this month to pursue my interest. Maybe that one right direction and one positive action can take me to the whole new level of my life. Only time will tell. 
+	The earliest opportunity presented itself in August 2005 when my family went on a month long vacation and I was left with too much time on my hands. My regular routine was to wake up at 5 a.m. and go to the gym. Then be at work from 9 to 5 and come back home at around 6 p.m. Because I was never a fan of wasting my time watching tv shows (except for a few ones) or playing video games (again, except for random rounds of fifa on my xbox) I started exploring different online resources and educate myself with programming languages that I would later find out form the front end development (aka client-side development) - html/css/javascript. Who knows, maybe sometime soon I will be forever grateful to my family for giving me this month to pursue my interest. Maybe that one right direction and one positive action can take me to the whole new level of my life. Only time will tell. 
 </span></p><hr>
 </div>
 </body>
