--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@ center {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
 }
 </style>
 </head>
@@ -107,7 +106,7 @@ center {
 
 <h3>Hello world (I don't give up)</h3>
 <p><span class="text-muted"> 
-  I know how the world works and how it is sometimes not fair to us. I've seen people getting hired for roles they were never qualified for in the first place. Even after being hired, they often had no motivation to improve and do more than a bare minimum. A lot of times they got away with it by knowing how to talk the talk, but not walk the walk. For myself, I was never like because I always believed in meritocracy and was never comfortable to ask for any favours. I built my career and established reputation of a high achiever all by myself. It's not that I was bad at networking. I had two close friends who were software architects in big companies whom I could ask for help. But I think it had more to do with my values that shape my life, my relationships and ultimately my career path. At this stage of my career I have proven myself, and accomplished many of the goals I had when I was younger. Now, when I think of challenging work, I think of something that I care about, something that ignites my passion and makes me happy. So I am just looking to find a company that wants such people - reliable high achievers who have a sense of personal quality control. I hope to meet you soon!    
+  I know how the world works and how it is sometimes not fair to us. I've seen people getting hired for roles they were never qualified for in the first place. Even after being hired, they often had no motivation to improve and do more than a bare minimum. A lot of times they got away with it by knowing how to talk the talk, but not walk the walk. For myself, I was never like because I always believed in meritocracy and was never comfortable to ask for any favours. I built my career and established reputation of a high achiever all by myself. It's not that I was bad at networking. I had two close friends who were software architects in big companies whom I could ask for help. But I think it had more to do with my values that shape my life, my relationships and ultimately my career path. At this stage of my career I have proven myself, and accomplished many of the goals I had when I was younger. Now, when I think of challenging work, I think of something that I care about, something that ignites my passion and makes me happy. So I am just looking to find a company that wants such people - reliable top performers who have a sense of personal quality control. And if you are that company...then you just found what you were looking for!     
 </span></p><hr>
 
 
