--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ hr.style1
   		background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); 
 	}
 	
-center {
+img.center {
     display: block;
     margin-left: auto;
     margin-right: auto;
