--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@ hr.style1
 	
 img.center {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin:0 auto;    
 }
 </style>
 </head>
